fix: fix last column uncentering with edge align disabled in Float Grid
Ensure to uncenter the last column with the right specificity even when `$grid-column-align-edge`  is disabled.

--- a/scss/grid/_position.scss
+++ b/scss/grid/_position.scss
@@ -17,8 +17,10 @@
 @mixin grid-column-position($position) {
   // Auto positioning
   @if $position == auto {
-    float: $global-left;
-    clear: none;
+    &, &:last-child:not(:first-child) {
+      float: $global-left;
+      clear: none;
+    }
 
     // Last column alignment
     @if $grid-column-align-edge {
